--- a/FrontEnd/src/CSS/Header.css
+++ b/FrontEnd/src/CSS/Header.css
@@ -8,6 +8,7 @@ a {
     justify-content: center;
     align-items: center;
     position: fixed;
+    z-index: 1;
     top: 0;
     width: 100%;
     background-color: #F8F8F8;
