--- a/FrontEnd/src/CSS/medicine.css
+++ b/FrontEnd/src/CSS/medicine.css
@@ -1,4 +1,3 @@
-
 @font-face {
     font-family: mySamsungSharpSans;
     src: url(../Fonts/SamsungSharpSans-Bold.ttf);
@@ -18,7 +17,7 @@
 
 /* Starting CSS for Filter */
 
-.filter{
+.filter {
     background-color: #E2E2E2;
     width: 230px;
     height: 420px;
@@ -26,24 +25,24 @@
     position: fixed;
 }
 
-.subcategory_filter{
+.subcategory_filter {
     background-color: none;
-    width: max-content;  
+    width: max-content;
     margin-left: 30px;
 }
 
-.subcategory_filter h5{
+.subcategory_filter h5 {
     font-family: mySamsungSharpSans;
 }
 
 .radioLabel {
     display: block;
-    position: relative;
+    /* position: relative; */
     cursor: pointer;
     margin-left: 20px;
 }
 
-.radioLabel{
+.radioLabel {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 0.9em;
     font-weight: 500;
@@ -55,13 +54,13 @@
 
 
 
-.Ratings_filter{
+.Ratings_filter {
     background-color: none;
-    width: max-content;  
+    width: max-content;
     margin-left: 30px;
 }
 
-.Ratings_filter h5{
+.Ratings_filter h5 {
     font-family: mySamsungSharpSans;
 }
 
@@ -76,37 +75,39 @@
 
 
 /* Starting CSS for Item Side */
-.itemsContainer{
+.itemsContainer {
     background-color: none;
     width: 1540px;
     margin-left: 263px;
 }
 
-.categoryTitle{
+.categoryTitle {
     background-color: none;
 }
 
-.categoryTitle h3{
+.categoryTitle h3 {
     font-family: mySamsungSharpSans;
     margin-top: 0px;
 }
 
-.items{
+.items {
     background-color: #E2E2E2;
     border-radius: 10px;
 }
 
-.itemBox{
+.itemBox {
     background-color: white;
     width: 180px;
-    height: max-content;
+    height: 370px;
     border-radius: 10px;
     display: inline-block;
     margin: 20px;
     padding-bottom: 10px;
+    position: relative;
+    z-index: 0;
 }
 
-.itemBox img{
+.itemBox img {
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
     margin: 0px 0px 10px 0px;
@@ -114,26 +115,26 @@
     height: 180px;
 }
 
-.itemBox h5{
+.itemBox h5 {
     font-family: mySamsungSharpSans;
     margin: 0px 0px 0px 10px;
 }
 
-.itemBox p{
+.itemBox p {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 0.8em;
     margin: 0px 0px 0px 10px;
 }
 
-.itemPrice{
+.itemPrice {
     font-weight: 700;
 }
 
-.itemStatus{
+.itemStatus {
     font-weight: 650;
 }
 
-.itemBox button{
+.itemBox button {
     margin: 15px 0px 0px 10px;
     border: none;
     background-color: rgb(38, 165, 1, 0.71);
@@ -141,9 +142,11 @@
     width: 80px;
     height: 30px;
     border-radius: 5px;
+    position: absolute;
+    bottom: 10px;
 }
 
-.itemBox button:hover{
+.itemBox button:hover {
     background-color: rgba(30, 122, 2, 0.71);
     cursor: pointer;
 }
