--- a/FrontEnd/src/components/navigation/nav.css
+++ b/FrontEnd/src/components/navigation/nav.css
@@ -10,3 +10,14 @@
     text-align: center;
 
 }
+
+a:link { text-decoration: none; }
+
+
+a:visited { text-decoration: none; }
+
+
+a:hover { text-decoration: none; }
+
+
+a:active { text-decoration: none; }
