--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -8,7 +8,7 @@ body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue';
-  background: #f4f4f4;
+  background: #ffffff;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
