Update Function Validation

--- a/FrontEnd/src/components/shopping-cart/Product.css
+++ b/FrontEnd/src/components/shopping-cart/Product.css
@@ -50,11 +50,15 @@
   font-weight:lighter;
   letter-spacing: .2rem;
   border-radius: 6px;
+  transition: all 150ms linear;
 }
 
 .info__button:hover {
   background: #0095C4;
   color: #f4f4f4;
+  box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
+  transform: translateY(-0.2em);
+  transition: all 250ms linear;
 }
 
 @media (max-width: 1232px) {
